# stop-watch

./: .gitignore  README.md  SETUP_INSTRUCTIONS.md  package-lock.json  package.json
src/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: ICONS_README.txt
src-tauri/src/: main.rs
